# pingus

./: pyproject.toml
modelos/: dt.pck  knn.pck  lr.pck  svm.pck
notebooks/: clasificacion.ipynb  clasificacion1.ipynb  clasificacion_old.ipynb  client.ipynb
pingus/: servidor.py
